Bug 156119 - konsole appearance transparency warning with white text looks bad
Summary: konsole appearance transparency warning with white text looks bad
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Robert Knight
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-01-18 17:26 UTC by Carlo Segato
Modified: 2008-04-12 12:07 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Carlo Segato 2008-01-18 17:26:25 UTC
Version:            (using Devel)
Installed from:    Compiled sources
OS:                Linux

just look at the screenshot
http://www.uploadgeek.com/uploads456/0/konsole.png
Comment 1 Robert Knight 2008-01-18 17:54:20 UTC
The dialog currently uses a stylesheet with a hard-coded background color.  This should be replaced with the KDE-global 'negative background' color.

"<property name="styleSheet" >
<string>* { background-color: #FFCCCC ; border-radius: 3px }</string>
</property>"
Comment 2 Robert Knight 2008-04-12 12:07:29 UTC
SVN commit 796014 by knight:

Use a new warning box widget for the 'transparency not supported' warning labels.
The new widget respects the current KDE color scheme.

BUG: 156119

Squashed commit of the following:

commit c7d81f7c65d2be87a4b70f485da6ec1b91be76b9
Author: Robert Knight <robertknight@gmail.com>
Date:   Sat Apr 12 11:05:11 2008 +0100

    Use the warning box for the 'transparency not supported' warning display in the color scheme and profile editors.

commit e4149b67588123540144f0496257194058c92fe4
Author: Robert Knight <robertknight@gmail.com>
Date:   Sat Apr 12 11:04:25 2008 +0100

    Add WarninBox to build.

commit d82adc02b9aad6cb99660a9b2d48cce2e3c42418
Author: Robert Knight <robertknight@gmail.com>
Date:   Sat Apr 12 11:04:02 2008 +0100

    Add a generic warning box widget which uses colors from the current KDE color scheme.


 M  +3 -1      CMakeLists.txt  
 M  +3 -1      ColorSchemeEditor.cpp  
 M  +12 -56    ColorSchemeEditor.ui  
 M  +3 -2      EditProfileDialog.cpp  
 M  +14 -42    EditProfileDialog.ui  
 A             WarningBox.cpp   [License: GPL (v2+)]
 A             WarningBox.h   [License: GPL (v2+)]


WebSVN link: http://websvn.kde.org/?view=rev&revision=796014