Use a new warning box widget for the 'transparency not supported' warning labels. The new widget respects the current KDE color scheme.

BUG: 156119

Squashed commit of the following:

commit c7d81f7c65d2be87a4b70f485da6ec1b91be76b9
Author: Robert Knight <robertknight@gmail.com>
Date:   Sat Apr 12 11:05:11 2008 +0100

    Use the warning box for the 'transparency not supported' warning display in the color scheme and profile editors.

commit e4149b67588123540144f0496257194058c92fe4
Author: Robert Knight <robertknight@gmail.com>
Date:   Sat Apr 12 11:04:25 2008 +0100

    Add WarninBox to build.

commit d82adc02b9aad6cb99660a9b2d48cce2e3c42418
Author: Robert Knight <robertknight@gmail.com>
Date:   Sat Apr 12 11:04:02 2008 +0100

    Add a generic warning box widget which uses colors from the current KDE color scheme.

svn path=/trunk/KDE/kdebase/apps/konsole/; revision=796014