src/ColorSchemeEditor.cpp
@@ -101,7 +101,9 @@ ColorSchemeEditor::ColorSchemeEditor(QWidget* parent)
     }
     else
     {
-        _ui->transparencyWarningIcon->setPixmap( KIcon("dialog-warning").pixmap(QSize(48,48)) );
+        _ui->transparencyWarningWidget->setText(i18n("The background transparency setting will not"
+											" be used because your desktop does not appear to support"
+											" transparent windows."));
     }
 }
 void ColorSchemeEditor::setRandomizedBackgroundColor( bool randomize )
